# internal/entity/querier.go
@@ -22,7 +22,7 @@ type Querier interface {
 	CountWorkOrdersByPOClientID(ctx context.Context, idPoClient int32) (int64, error)
 	CreateAktivitasLog(ctx context.Context, aksi string) (LogAktivita, error)
 	CreateAktivitasLogDetail(ctx context.Context, arg CreateAktivitasLogDetailParams) (LogAktivitasDetail, error)
-	CreateApprovalDetail(ctx context.Context, arg []CreateApprovalDetailParams) (int64, error)
+	CreateApprovalDetail(ctx context.Context, arg CreateApprovalDetailParams) (CreateApprovalDetailRow, error)
 	CreateApprovalHeader(ctx context.Context, arg CreateApprovalHeaderParams) (int32, error)
 	CreateBarang(ctx context.Context, arg CreateBarangParams) (Barang, error)
 	CreateCompany(ctx context.Context, arg CreateCompanyParams) (Company, error)
@@ -37,7 +37,7 @@ type Querier interface {
 	CreatePOClientItem(ctx context.Context, arg CreatePOClientItemParams) (PoClientItem, error)
 	CreatePOInternal(ctx context.Context, arg CreatePOInternalParams) (PoInternal, error)
 	CreatePOInternalItem(ctx context.Context, arg CreatePOInternalItemParams) (PoInternalItem, error)
-	CreatePRInternal(ctx context.Context, arg CreatePRInternalParams) (CreatePRInternalRow, error)
+	CreatePRInternal(ctx context.Context, arg CreatePRInternalParams) (PrInternal, error)
 	CreatePRInternalItem(ctx context.Context, arg CreatePRInternalItemParams) (PrInternalItem, error)
 	CreatePackingList(ctx context.Context, arg CreatePackingListParams) (PackingList, error)
 	CreatePackingListItem(ctx context.Context, arg CreatePackingListItemParams) (PackingListItem, error)
@@ -60,7 +60,7 @@ type Querier interface {
 	CreateUserAkses(ctx context.Context, arg CreateUserAksesParams) error
 	CreateWOShellPlan(ctx context.Context, arg []CreateWOShellPlanParams) (int64, error)
 	CreateWarna(ctx context.Context, arg CreateWarnaParams) (Warna, error)
-	CreateWorkOrder(ctx context.Context, arg CreateWorkOrderParams) (CreateWorkOrderRow, error)
+	CreateWorkOrder(ctx context.Context, arg CreateWorkOrderParams) (WorkOrder, error)
 	CreateWorkOrderShell(ctx context.Context, arg CreateWorkOrderShellParams) (WorkOrderShell, error)
 	CreateWorkOrderShellSize(ctx context.Context, arg CreateWorkOrderShellSizeParams) (WorkOrderShellSize, error)
 	CreateWorkOrderTrim(ctx context.Context, arg CreateWorkOrderTrimParams) (WorkOrderTrim, error)
@@ -78,6 +78,9 @@ type Querier interface {
 	DeleteUserAksesByUserID(ctx context.Context, idUser int32) (int64, error)
 	DeleteWarna(ctx context.Context, idWarna int32) (int64, error)
 	GetAktivitasLogs(ctx context.Context, arg GetAktivitasLogsParams) ([]GetAktivitasLogsRow, error)
+	GetApprovalDetailByID(ctx context.Context, idOtoritasDetail int32) (OtoritasDokumenDetail, error)
+	GetApprovalHeaderByDoc(ctx context.Context, arg GetApprovalHeaderByDocParams) (OtoritasDokuman, error)
+	GetApprovalHeaderByID(ctx context.Context, idOtoritas int32) (OtoritasDokuman, error)
 	GetBarangByID(ctx context.Context, idBarang int32) (GetBarangByIDRow, error)
 	GetCompany(ctx context.Context) (Company, error)
 	GetCompanyByID(ctx context.Context, idCompany int32) (Company, error)
@@ -94,7 +97,6 @@ type Querier interface {
 	GetPOInternalDetail(ctx context.Context, idPoInternal int32) (PoInternal, error)
 	GetPRInternalDetail(ctx context.Context, idPrInternal int32) (GetPRInternalDetailRow, error)
 	GetPackingListDetail(ctx context.Context, arg GetPackingListDetailParams) (GetPackingListDetailRow, error)
-	GetPendingApprovalsByUser(ctx context.Context, idUser int32) ([]GetPendingApprovalsByUserRow, error)
 	GetRekonsiliasiMaterialStock(ctx context.Context, idRekonsiliasiMaterial int32) (GetRekonsiliasiMaterialStockRow, error)
 	GetRoleByID(ctx context.Context, idRole int32) (Role, error)
 	GetRoleByName(ctx context.Context, namaRole string) (Role, error)
@@ -105,17 +107,22 @@ type Querier interface {
 	GetSuratJalanClientDetail(ctx context.Context, arg GetSuratJalanClientDetailParams) (GetSuratJalanClientDetailRow, error)
 	GetSuratJalanInternalDetail(ctx context.Context, idSuratJalanInternal int32) (SuratJalanInternal, error)
 	GetTimelinePlanByID(ctx context.Context, idTimeline int32) (TimelinePlanProduksi, error)
+	GetTruePendingApprovalsByUser(ctx context.Context, idUser int32) ([]GetTruePendingApprovalsByUserRow, error)
 	GetUserByID(ctx context.Context, idUser int32) (GetUserByIDRow, error)
 	GetUserByUsername(ctx context.Context, username string) (GetUserByUsernameRow, error)
 	GetUserPermissionIDs(ctx context.Context, idUser int32) ([]int32, error)
 	GetUserPermissions(ctx context.Context, idUser int32) ([]string, error)
+	GetUsersByRoleName(ctx context.Context, namaRole string) ([]GetUsersByRoleNameRow, error)
 	GetWOShellPlansByTimelineID(ctx context.Context, idTimeline int32) ([]GetWOShellPlansByTimelineIDRow, error)
 	GetWarnaByID(ctx context.Context, idWarna int32) (Warna, error)
 	GetWorkOrderDetail(ctx context.Context, arg GetWorkOrderDetailParams) (GetWorkOrderDetailRow, error)
 	// Mengambil data WO dan Production Internal untuk diolah model Regresi Linier di Golang
 	GetWorkOrderForAIEstimation(ctx context.Context) ([]GetWorkOrderForAIEstimationRow, error)
 	HasPendingPasswordResetRequest(ctx context.Context, idUser int32) (bool, error)
+	HasPendingSteps(ctx context.Context, idOtoritas int32) (bool, error)
+	HasPreviousPendingSteps(ctx context.Context, arg HasPreviousPendingStepsParams) (bool, error)
 	IssueInventory(ctx context.Context, arg IssueInventoryParams) (IssueInventoryRow, error)
+	ListApprovalDetailsByHeaderID(ctx context.Context, idOtoritas int32) ([]OtoritasDokumenDetail, error)
 	ListBarang(ctx context.Context, arg ListBarangParams) ([]ListBarangRow, error)
 	ListDepartemen(ctx context.Context, arg ListDepartemenParams) ([]Departeman, error)
 	ListHakAkses(ctx context.Context, arg ListHakAksesParams) ([]HakAkse, error)
@@ -151,9 +158,11 @@ type Querier interface {
 	ReceiveInventory(ctx context.Context, arg ReceiveInventoryParams) (ReceiveInventoryRow, error)
 	RejectPasswordResetRequest(ctx context.Context, arg RejectPasswordResetRequestParams) (RejectPasswordResetRequestRow, error)
 	ResetUserPasswordTemporary(ctx context.Context, arg ResetUserPasswordTemporaryParams) (int64, error)
+	UpdateApprovalStep(ctx context.Context, arg UpdateApprovalStepParams) (UpdateApprovalStepRow, error)
 	UpdateBarang(ctx context.Context, arg UpdateBarangParams) (Barang, error)
 	UpdateCompany(ctx context.Context, arg UpdateCompanyParams) (Company, error)
 	UpdateDepartemen(ctx context.Context, arg UpdateDepartemenParams) (Departeman, error)
+	UpdateGlobalStatus(ctx context.Context, arg UpdateGlobalStatusParams) (UpdateGlobalStatusRow, error)
 	UpdateHakAkses(ctx context.Context, arg UpdateHakAksesParams) (HakAkse, error)
 	UpdateJenisBarang(ctx context.Context, arg UpdateJenisBarangParams) (JenisBarang, error)
 	UpdateMitra(ctx context.Context, arg UpdateMitraParams) (Mitra, error)
